# djangocms-attributes-field

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  README.rst  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: coverage.yml  lint.yml  pre-commit.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_attributes_field/: fields.py  forms.py  models.py  utils.py  widgets.py
djangocms_attributes_field/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_attributes_field/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_attributes_field/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_attributes_field/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_attributes_field/static/djangocms_attributes_field/: widget.css  widget.js
djangocms_attributes_field/tests/: test_validation.py
requirements/: compile.py  py310-cms310-django32.txt  py38-cms310-django32.txt  py39-cms39-django32.txt  requirements.in
test_requirements/: base.txt  django-1.10.txt  django-1.11.txt
tests/: settings.py  test_fields.py  test_migrations.py  test_plugins.py  test_validation.py  test_widgets.py
tests/requirements/: base.txt  dj32_cms311.txt  dj40_cms311.txt  dj41_cms311.txt  dj42_cms311.txt  dj42_cms41.txt  dj42_cms50.txt  dj50_cms50.txt  dj51_cms50.txt  dj52_cms50.txt
tests/test_app/: cms_plugins.py  forms.py  models.py
tests/test_app/migrations/: 0001_initial.py
tests/test_app/templates/test_app/: test.html
